# bjoernf.com

./: .dockerignore  .env.development  .gitignore  CLAUDE.md  Dockerfile  README.md  astro.config.mjs  bjornf.code-workspace  bjornf.dev.code-workspace  bun.lockb  dev.yaml  dev.yml  docker-compose-dev.yml  docker-compose.yaml  docker-compose.yml  drizzle.config.habits.ts  jsconfig.json  package.json  postcss.config.cjs  proxy.yml  tailwind.config.mjs  tsconfig.json
.claude/: settings.local.json
api/: .dockerignore  .gitignore  Dockerfile  package.json  requirements.txt  tox.ini
api-base/: Dockerfile  requirements.txt
docker/: dev-config.yml  dev-static-config.yml  prod-config.yml
docs/: infrastructure.drawio
drizzle/: 0000_outgoing_iron_man.sql  0001_special_shocker.sql
image-server/: .gitignore  Dockerfile  package.json  requirements.txt  start.sh
patches/: astro@5.16.8.patch  node.js
public/: list.xml  robots.txt  wikipedia-game.json
render-server/: .eslintrc  .gitignore  Dockerfile  index.js  package-lock.json  package.json  start.sh  watch.js  watcher.js
src/: content.config.ts  content.css  highlight.css  middleware.ts
src/pages/games/wikipedia-connections/data/: links-2025-03-02.json  links-2025-03-03.json  links-2025-03-04.json  links-2025-03-05.json  links-2025-03-06.json  links-2025-03-07.json  load.py  pyproject.toml
static/: Dockerfile  dev.conf  gzip.conf  start.sh
tmux/: activate_venv.sh  all.yml  hot.yml
vhost.d/: default_location  static.bjornf.dev  static.bjornf.dev_location
web/: .babelrc  .dockerignore  .env.production  (+10 more)
(+401 files in other folders)
