[tool.poetry]
name = "wikipedia-connections"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Björn Friedrichs <mail@bjoernf.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
